Allow all versions of chat-code-generator

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }
   },
   "require": {
-    "smartsupp/chat-code-generator": "1.*",
+    "smartsupp/chat-code-generator": "*",
     "smartsupp/php-partner-client": "1.*"
   }
 }
